--- a/css/detail.css
+++ b/css/detail.css
@@ -13,7 +13,7 @@ section h1 {
 }
 .detail-title {
 	padding-top: 2.133333rem;
-	padding-buttom: 1.6rem;
+	padding-bottom: 1.6rem;
 	text-align: center;
 }
 .detail-list {
@@ -27,12 +27,12 @@ section h1 {
 	background-color: #f2f2f0;
 }
 .mui-table-view-cell {
-	padding: 0.293333rem 0px;
+	padding: 0.293333rem 0;
 }
 
 .mui-table-view-cell > a:not(.mui-btn) {
-	margin: -0.293333rem 0px;
+	margin: -0.293333rem 0;
 }
 .mui-table-view-cell:before {
-	height: 0px;
+	height: 0;
 }
